

Changelog
=========

0.4 (2014-02-09)
----------------
    
* added browser view to choose image size to export


0.3 (2012-09-20)
----------------
    
* added the browser view to "collection"
* added support for dexterity content types


0.2 (2012-12-05)
----------------
    
* downloaded images now gets the right suffix.


0.1 (2011-05-12)
----------------
    
* first version